tests/ui/lang/consts/nested-ref-in-composite.stderr
error: constant arrays/structs cannot contain pointers to other constants
  --> $DIR/nested-ref-in-composite.rs:22:17
   |
22 |     *pair_out = pair_deep_load(&(&123, &3.14));
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Stack:
           nested_ref_in_composite::main_pair
           Unnamed function ID %24

error: constant arrays/structs cannot contain pointers to other constants
  --> $DIR/nested-ref-in-composite.rs:27:19
   |
27 |     *array3_out = array3_deep_load(&[&0, &1, &2]);
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: Stack:
           nested_ref_in_composite::main_array3
           Unnamed function ID %33

error: error:0:0 - failed spawn executable: No such file or directory (os error 2)
  |
  = note: spirv-val failed
  = note: module `$TEST_BUILD_DIR/lang/consts/nested-ref-in-composite.stage-id.spv.dir/module`

error: aborting due to 3 previous errors

